Fixed height for one portfolio item on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -824,11 +824,11 @@ h3 {
         background-color: #046343;
         align-content: center;
         margin-bottom: 8rem;
-        height: 500px;
+        height: 625px;
     }
     .intro-kilta {
         background-color: #ffd5a3;
-        height: 330px;
+        height: 350px;
     }
 
     .intro__img,
